# worker

./: .codeclimate.yml  .docker-entrypoint.sh  .editorconfig  .example.env  .gitignore  .goxc.json  .snapcraft.yaml  .travis.yml  .vagrant-provision.sh  CHANGELOG.markdown  CHANGELOG.md  CONTRIBUTING.md  Deps  Dockerfile  Dockerfile.ppc64le  Godeps  LICENSE  Makefile  PULL_REQUEST_TEMPLATE  README.md  Vagrantfile  amqp_canceller.go  amqp_canceller_test.go  amqp_job.go  amqp_job_queue.go  amqp_job_test.go  amqp_log_writer.go  amqp_log_writer_factory.go  amqp_log_writer_test.go  amqp_logs_queue.go  amqp_test.go  bluebox.go  build.sh  build_script.go  build_script_generator.go  build_script_generator_test.go  build_trace_persister.go  canceller.go  canceller_test.go  cli.go  (+78 more)
.github/: PULL_REQUEST_TEMPLATE.md
.snapcraft/: daemon.start
Godeps/: Godeps.json
backend/: backend.go  bluebox_test.go  cloudbrain.go  cloudbrain_client.go  docker.go  docker_test.go  ec2.go  fake.go  gce.go  gce_test.go  jupiterbrain.go  local.go  lxd.go  openstack.go  package.go  package_test.go  progresser.go  sauce_labs.go  start_attributes.go  start_attributes_test.go  text_progresser.go  text_progresser_test.go  vpc.go
config/: config.go  config_test.go  defaults.go  flags.go  provider_config.go  worker.json.example
context/: package.go
errors/: errors.go
image/: api_selector.go  api_selector_test.go  doc.go  env_selector.go  env_selector_test.go  manager.go  params.go  selector.go
lib/: bluebox.go  canceller.go  (+36 more)
test/: Main.hs  log_integration_test.go  package.go  worker-test.cabal
(+183 files in other folders)
