name:                worker-test
version:             0.1.0.0
license:             MIT
author:              Travis CI GmbH
maintainer:          henrik@travis-ci.com
build-type:          Simple
cabal-version:       >=1.10

executable worker-test
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8,
                       amqp >=0.10 && <0.11,
                       bytestring >=0.10 && <0.11,
                       hspec >=2.1 && <2.2,
                       json ==0.9,
                       scotty >=0.9 && <0.10
  default-language:    Haskell2010
